--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,7 +10,7 @@
   "author": "Aadit Jha",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "3.1.7",
+    "nodemon": "^3.1.7",
     "prettier": "^3.3.3"
   },
   "dependencies": {
